feat.part(DevContainer): Created dev Dockerfile

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,36 +1,41 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/docker-existing-dockerfile
 {
-	"name": "Existing Dockerfile",
-	"build": {
-		// Sets the run context to one level up instead of the .devcontainer folder.
-		// "context": "..",
-		// Update the 'dockerFile' property if you aren't using the standard 'Dockerfile' filename.
-		"dockerfile": "../Dockerfile"
-	} ,
-	// "features": {
-	// 	"ghcr.io/devcontainers/features/go:1": {
-	// 		"version": "latest"
-	// 	}
-	// },
-	// 	"ghcr.io/devcontainers/features/node:1": {
-	// 		"nodeGypDependencies": true,
-	// 		"version": "lts"
-	// 	}
-	// }
+  "name": "Existing Dockerfile",
+  "build": {
+    // Sets the run context to one level up instead of the .devcontainer folder.
+    "context": "..",
+    // Update the 'dockerFile' property if you aren't using the standard 'Dockerfile' filename.
+    // "dockerfile": "../Dockerfile",
+    "dockerfile": "../.devcontainer/Dockerfile",
+    "args": {
+      "BASE_IMAGE": "ubuntu:20.04",
+      "GO_IMAGE": "golang:1.20.1"
+    }
+  },
+  // "features": {
+  // 	"ghcr.io/devcontainers/features/go:1": {
+  // 		"version": "latest"
+  // 	}
+  // },
+  // 	"ghcr.io/devcontainers/features/node:1": {
+  // 		"nodeGypDependencies": true,
+  // 		"version": "lts"
+  // 	}
+  // }
 
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
+  // Features to add to the dev container. More info: https://containers.dev/features.
+  // "features": {},
 
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	"forwardPorts": [3000]
+  // Use 'forwardPorts' to make a list of ports inside the container available locally.
+  "forwardPorts": [3000]
 
-	// Uncomment the next line to run commands after the container is created.
-	// "postCreateCommand": "cat /etc/os-release",
+  // Uncomment the next line to run commands after the container is created.
+  // "postCreateCommand": "cat /etc/os-release",
 
-	// Configure tool-specific properties.
-	// "customizations": {},
+  // Configure tool-specific properties.
+  // "customizations": {},
 
-	// Uncomment to connect as an existing user other than the container default. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "devcontainer"
+  // Uncomment to connect as an existing user other than the container default. More info: https://aka.ms/dev-containers-non-root.
+  // "remoteUser": "devcontainer"
 }
